--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "fastapi>=0.116.1",
     "pydantic>=2.11.7",
     "pyodbc>=5.2.0",
+    "python-dotenv>=1.1.1",
     "python-multipart>=0.0.20",
 ]
 
