--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,16 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "asyncio-pool>=0.6.0",
     "azure-functions>=1.23.0",
     "fastapi>=0.116.1",
+    "httpx>=0.28.1",
     "pydantic>=2.11.7",
     "pyodbc>=5.2.0",
     "python-dotenv>=1.1.1",
     "python-multipart>=0.0.20",
+    "redis>=6.4.0",
+    "uvicorn>=0.34.0",
 ]
 
 [dependency-groups]
