haciendo funcionar ci/cd

--- a/.github/workflows/main_aguatrasparenteapi.yml
+++ b/.github/workflows/main_aguatrasparenteapi.yml
@@ -29,49 +29,41 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
-      - name: Create and start virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-
-      # Optional: Add step to run tests here
-
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      # Don't create venv or install dependencies - Azure will handle this
+      # Just upload the source code and requirements.txt
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: python-app
           path: |
-            release.zip
-            !venv/
+            .
+            !.git
+            !.github
+            !.venv
+            !venv
+            !__pycache__
+            !*.pyc
+            !.env
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: python-app
 
-      - name: Unzip artifact for deployment
-        run: |
-          unzip release.zip
-          rm release.zip
-        
       - name: 'Deploy to Azure Functions'
         uses: Azure/functions-action@v1
         id: deploy-to-function
         with:
           app-name: 'AguaTrasparenteApi'
           slot-name: 'Production'
-          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+          package: '.'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_644838FA50C04E128E7173E992D7A362 }}
-          sku: 'flexconsumption'
+          scm-do-build-during-deployment: true
+          enable-oryx-build: true
         
