--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,10 @@ dependencies = [
 [dependency-groups]
 dev = [
     "black>=25.1.0",
+    "colorama>=0.4.6",
+    "pandas>=3.0.0",
     "pytest>=8.4.2",
+    "requests>=2.32.5",
     "ruff>=0.12.12",
+    "tabulate>=0.9.0",
 ]
